@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.858 2007-10-15 17:27:25 castaglia Exp $
+$Id: NEWS,v 1.859 2007-10-15 17:53:28 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -47,6 +47,8 @@ CVS
 - Bug #2993 - Unable to compile 1.3.1 on Debian unstable/amd64.  The configure
   script was brokenly checking for the umode_t data type, which is not needed
   by the proftpd source code.
+- Bug #2992 - The %f LogFormat variable expanded improperly to "-" for
+  SITE CHMOD.
 
 1.3.1 - Released 5-Oct-2007
 --------------------------------
